Contact page added

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <a href="./softwareDevelopment/index.html" class="w3-bar-item w3-button"> Software Development</a>
           <a href="./managedServices/index.html" class="w3-bar-item w3-button"> Managed Services</a>
           <a href="./consulting/index.html" class="w3-bar-item w3-button">Consulting</a>
-          <a href="#contact" class="w3-bar-item w3-button">Contact Us</a>
+          <a href="./contactUs/index.html" class="w3-bar-item w3-button">Contact Us</a>
          </div>
         <!-- Hide right-floated links on small screens and replace them with a menu icon -->
       <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="w3_open()">
@@ -60,7 +60,7 @@
   <a href="./softwareDevelopment/index.html" onclick="w3_close()" class="w3-bar-item w3-button">Software Development</a>
   <a href="./managedServices/index.html" onclick="w3_close()" class="w3-bar-item w3-button"> Managed Services</a>
   <a href="./consulting/index.html" onclick="w3_close()" class="w3-bar-item w3-button">Consulting</a>
-  <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">Contact Us</a>
+  <a href="./contactUs/index.html" onclick="w3_close()" class="w3-bar-item w3-button">Contact Us</a>
 </nav>
 
 <!-- Header with full-height image -->
