Button Effect on hover

--- a/softwareDevelopment/index.html
+++ b/softwareDevelopment/index.html
@@ -26,23 +26,26 @@
       .w3-bar .w3-button {
         padding: 16px;
       }
+
+ 
+
       </style>
   </head>
   <body>
     <div class="w3-top">
       <div class="w3-bar w3-white w3-card" id="myNavbar">
-        <a href="#home" class="w3-bar-item w3-button w3-wide company-text">
+        <a href="#home" class="w3-bar-item w3-button w3-wide company-text"  style="padding-top: 32px;">
           <img class="company-logo" alt="" src="../public/group-754.svg" />
           SYNEZ
         </a>
         <!-- Right-sided navbar links -->
         <div class="w3-right w3-hide-small bar-item-text ">
-          <a href="../index.html" class="w3-bar-item w3-button" >Home</a>
-          <a href="../aboutUs/index.html" class="w3-bar-item w3-button">About us</a>
-          <a href="./index.html" class="w3-bar-item w3-button"> Software Development</a>
-          <a href="../managedServices/index.html" class="w3-bar-item w3-button"> Managed Services</a>
-          <a href="../consulting/index.html" class="w3-bar-item w3-button">Consulting</a>
-          <a href="../contactUs/index.html" class="w3-bar-item w3-button">Contact Us</a>
+          <a href="../index.html" class="w3-bar-item w3-button w3-padding-xlarge" >Home</a>
+          <a href="../aboutUs/index.html" class="w3-bar-item w3-button w3-padding-xlarge">About us</a>
+          <a href="./index.html" class="w3-bar-item w3-button w3-padding-xlarge"> Software Development</a>
+          <a href="../managedServices/index.html" class="w3-bar-item w3-button w3-padding-xlarge"> Managed Services</a>
+          <a href="../consulting/index.html" class="w3-bar-item w3-button w3-padding-xlarge">Consulting</a>
+          <a href="../contactUs/index.html" class="w3-bar-item w3-button w3-padding-xlarge">Contact Us</a>
          </div>
         <!-- Hide right-floated links on small screens and replace them with a menu icon -->
       <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="w3_open()">
