--- a/contactUs.html
+++ b/contactUs.html
@@ -293,11 +293,11 @@
 </div>
  <div class="w3-quarter w3-medium w3-padding-small">
     <h4 class="w3-padding-16">Explore</h4>
-    <p><a style="text-decoration:none"  href="#home">HOME</a></p>
-    <p><a style="text-decoration:none" href="#about">ABOUT US</a></p>
-    <p><a style="text-decoration:none"  href="#softwareDev">SOFTWARE DEVELOPMENT</a></p>
-    <p><a style="text-decoration:none" href="#MngSer">MANAGED SERVICES</a></p>
-    <p><a style="text-decoration:none" href="#Consulting">CONSULTING</a></p>
+    <p><a style="text-decoration:none"  href="./index.html">HOME</a></p>
+    <p><a style="text-decoration:none" href="./aboutUs.html">ABOUT US</a></p>
+    <p><a style="text-decoration:none"  href="./softwareDevelopment.html">SOFTWARE DEVELOPMENT</a></p>
+    <p><a style="text-decoration:none" href="./managedServices.html">MANAGED SERVICES</a></p>
+    <p><a style="text-decoration:none" href="./consulting.html">CONSULTING</a></p>
  </div>
  <div class="w3-quarter w3-medium w3-padding-small">
     <h4 class="w3-padding-16">Keep in touch</h4>
