Push Image fixes

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -264,8 +264,8 @@
       <div class="w3-col m6" style="padding-left: 32px; float:right">
         <h3 class="w3-hide-small w3-xxlarge" style="margin-top: 0;">What best describe us</h3>
         <h3 class="w3-xlarge w3-hide-large w3-hide-medium">What best describe us</h3>
-        <p class=" w3-hide-small" style="line-height: 36px; margin-top: 20px;">We empowers businesses with tailored IT solutions, emphasizing effective <br> communication, customized support, and uncompromising quality. Our experienced <br>and dedicated team is driven to overcome challenges, achieve success, and  <br>establish market dominance through contracts with businesses and governments.</p>
-        <p class="w3-hide-large w3-hide-medium" style="line-height: 36px">We empowers businesses with tailored IT solutions, emphasizing effective communication, customized support, and uncompromising quality. Our experienced and dedicated team is driven to overcome challenges, achieve success, and establish market dominance through contracts with businesses and governments.</p>
+        <p class=" w3-hide-small" style="line-height: 36px; margin-top: 20px;">We empower businesses with tailored IT solutions, emphasizing effective <br> communication, customized support, and uncompromising quality. Our experienced <br>and dedicated team is driven to overcome challenges, achieve success, and  <br>establish market dominance through contracts with businesses and governments.</p>
+        <p class="w3-hide-large w3-hide-medium" style="line-height: 36px">We empower businesses with tailored IT solutions, emphasizing effective communication, customized support, and uncompromising quality. Our experienced and dedicated team is driven to overcome challenges, achieve success, and establish market dominance through contracts with businesses and governments.</p>
         <ul class="w3-ul">
             <li style="display: flex;align-items: center; ">
                 <img alt="" src="./images/describe_img1.png" />
