--- a/softwareDevelopment.html
+++ b/softwareDevelopment.html
@@ -237,7 +237,7 @@
   
           </div>
           <div class="w3-col l5 m9 w3-padding-64" style="float: right;">
-            <img class="w3-image w3-round-small" src="./images/sd_img1.png" alt="home_img1"  style=" box-shadow: 20px -20px  #E98862" style="max-width: 100%;
+            <img class="w3-image w3-round-small" src="./images/SD_img1.png" alt="SD_img1"  style=" box-shadow: 20px -20px  #E98862" style="max-width: 100%;
             height: auto;">
           </div>
         </div>
