--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
     </div>
     <div class="w3-col s8">
       <p class="w3-center" style="font-size: 29px; font-weight: 400;line-height: 40px;"> Lorem Ipsum is simply dummy text of the printing and<br/>typesetting industry. Lorem Ipsum has been the industry's<br/> standard dummy text</p>
-      <p class="w3-center w3-text-orange"  style="font-size: 23px; font-weight: 400;line-height: 40px;"> <b> John Smith <br/> CEO of ABC </b> </p>\
+      <p class="w3-center w3-text-orange"  style="font-size: 23px; font-weight: 400;line-height: 40px;"> <b> John Smith <br/> CEO of ABC </b> </p>
       <div class="w3-center w3-padding-32" >
         <span class="dot" onclick="currentSlide(1)"></span> 
         <span class="dot" onclick="currentSlide(2)"></span> 
