Push word fixea

--- a/contactUs.html
+++ b/contactUs.html
@@ -218,10 +218,10 @@
 <!---consulting-->
 <div class="w3-container element w3-padding-64">
     <div class="w3-col m4 l4"  >
-        <h3 class="w3-xxlarge w3-hide-small">Let's talk!</h3>
-        <h3 class="w3-xlarge w3-hide-large w3-hide-medium">Let's talk!</h3>
+        <h3 class="w3-xxlarge w3-hide-small">Let's Talk!</h3>
+        <h3 class="w3-xlarge w3-hide-large w3-hide-medium">Let's Talk!</h3>
   
-      <p class="w3-large">Share your needs with us to gain a comprehensive understanding of your project.</p>
+      <p class="w3-large">Share Your Needs With Us To Gain A Comprehensive Understanding Of Your Project.</p>
     </div>
     <div class="w3-col m8 l7" style="float: right;">
       <form action="form-handler.php" method="post">
@@ -263,7 +263,7 @@
                 <div class="w3-center">
                     <img  src="./images/phone_img.png" class="w3-padding-16"/>
                     </div>
-                   <p class="w3-large"><b>CALL US</b><br>+91 9711311790</p>
+                   <p class="w3-large"><b>CALL US</b><br>+91 7290040506</p>
             </div>
             </div>
             <div class="w3-col l4  m6  w3-padding-large">
@@ -278,8 +278,8 @@
         </div>
     </div>
     <div class="w3-container element">
-        <h3 class="w3-xxlarge w3-hide-small">Find us on goolge map</h3>
-        <h3 class="w3-xlarge w3-hide-large w3-hide-medium">Find us on goole map</h3>
+        <h3 class="w3-xxlarge w3-hide-small">Find us on Goolge map</h3>
+        <h3 class="w3-xlarge w3-hide-large w3-hide-medium">Find us on Google map</h3>
         <img src="./images/company_location.png" class="w3-image" style="width:100%;">
       
       </div>
