--- a/managedServices.html
+++ b/managedServices.html
@@ -245,8 +245,8 @@
       
    <!-- Our Core competencies -->
   <div class="w3-container element">
-    <h3 class="w3-xxlarge w3-hide-small">How we Safeguard Your Enterprise and Customers</h3>
-      <h3 class="w3-xlarge w3-hide-large w3-hide-medium">How we Safeguard Your Enterprise and Customers</h3>
+    <h3 class="w3-xxlarge w3-hide-small">How We Safeguard Your Enterprise And Customers</h3>
+      <h3 class="w3-xlarge w3-hide-large w3-hide-medium">How We Safeguard Your Enterprise And Customers</h3>
       <p style="font-size: 22px;line-height: normal;"> Our exceptional Managed Security solutions are easy to implement and oversee, consistently achieving high success rates in thwarting contemporary cyber threats.</p>
       <div class="w3-row-padding" style="margin-top:32px">
         <div class="w3-col l3 m6">
