--- a/softwareDevelopment.html
+++ b/softwareDevelopment.html
@@ -242,8 +242,8 @@
           </div>
         </div>
       </div>
-      <h3 class="w3-xxlarge w3-hide-small element">Our Core competencies</h3>
-      <h3 class="w3-xlarge w3-hide-large w3-hide-medium element">Our Core competencies</h3>
+      <h3 class="w3-xxlarge w3-hide-small element">Our Core Competencies</h3>
+      <h3 class="w3-xlarge w3-hide-large w3-hide-medium element">Our Core Competencies</h3>
    <!-- Our Core competencies -->
   <div class="w3-container">
     <div class="w3-border-top"> </div>
