--- a/consulting.html
+++ b/consulting.html
@@ -257,7 +257,7 @@
             <h3 class="w3-xlarge w3-hide-large w3-hide-medium">Consulting</h3>
             <p  style="line-height: 36px">We understand the critical role that technology plays in today's business landscape, and we are committed to helping you harness its full potential.<br><br>
                 With our expertise and in-depth knowledge of the latest industry trends, we offer strategic guidance and tailored solutions that align with your unique business objectives. Whether you are looking to optimize your existing I.T. infrastructure, implement new systems, or navigate digital transformation, our consulting services are geared towards enhancing your company's performance, scalability, and competitiveness.<br><br>
-                Partnering with us means gaining a trusted advisor who is dedicated to your success. We not only deliver</p>
+                Partnering with us means gaining a trusted advisor who is dedicated to your success. </p>
         </div>
           <div class="w3-col l5 m9 w3-padding-64" style="float: right;">
             <img class="w3-image w3-round-small" src="./images/consulting_img1.png" alt="home_img1"  style=" box-shadow: 20px -20px #E98862" style="max-width: 100%;
@@ -270,7 +270,7 @@
    <div class="grid-container">
     <div class="grid-item">
         <div class="w3-card w3-deep-blue" style="padding:32px 32px; height:323px">
-            <h4> <b>Assess and design</b></h4>
+            <h4> <b>Assess and Design</b></h4>
            <p class="w3-large">
             We analyze your current state, identify potential risks, and create a robust resilience plan to ensure the recovery and smooth resumption of your critical business services.
            </p>
@@ -299,7 +299,7 @@
 <div class="grid-container">
     <div class="grid-item">
         <div class="w3-card w3-blue" style="padding:32px 32px; height:323px">
-            <h4> <b>Manage and sustain</b></h4>
+            <h4> <b>Manage and Sustain</b></h4>
            <p class="w3-large">
             Leverage program management services to establish and maintain a resilient environment while continuously monitoring and ensuring readiness for resiliency.
            </p>
