--- a/aboutUs.html
+++ b/aboutUs.html
@@ -276,21 +276,21 @@
             </li> 
             <li style="display: flex;align-items: center; ">
                 <img alt="" src="./images/describe_img2.png" />
-                <div style="margin-left: 32px;">
+                <div style="margin-left: 24px;">
                 <h4> Worldwide Clients</h4>
                 <p>  We are trusted by 20+ clients from worldwide.</p>
                 </div>
             </li> 
             <li style="display: flex;align-items: center; ">
                 <img alt="" src="./images/describe_img3.png" />
-                <div style="margin-left: 32px;">
+                <div style="margin-left: 24px;">
                 <h4> Tech Innovator </h4>
                 <p>  Lifetime provider of uttermost tactics for your digital journey.</p>
                 </div>
             </li> 
             <li style="display: flex;align-items: center; ">
                 <img alt="" src="./images/describe_img4.png" />
-                <div style="margin-left: 32px;">
+                <div style="margin-left: 24px;">
                 <h4>  Tech centric  </h4>
                 <p>  24*7 support from our expertise to your business.</p>
                 </div>
@@ -311,8 +311,8 @@
             <img  src="./images/value_img1.png" class="w3-padding-32"/>
            <p>
             <h4 > <b>Transparency</b></h4>
-           Maintaining utmost clarity throughout our process is key to delivering
-              premium-quality results.
+           Maintaining Utmost Clarity Throughout Our Process Is Key To Delivering
+              Premium-Quality Results.
            </p>
            </div>
     </div>
@@ -321,8 +321,8 @@
           <img  src="./images/value_img2.png" class="w3-padding-32"/>
          <p>
           <h4 > <b>Innovation</b></h4>
-          We leverage cutting-edge technologies to pioneer futuristic solutions,
-          transforming your ideas into tangible reality.
+          We Leverage Cutting-edge Technologies To Pioneer Futuristic Solutions,
+          Transforming Your Ideas Into Tangible Reality.
          </p>
          </div>
     </div>
@@ -331,8 +331,8 @@
           <img  src="./images/value_img3.png" class="w3-padding-32"/>
          <p>
           <h4 > <b>Collaboration</b></h4>
-          Our collaborative approach, uniting technology experts and business
-          teams, ensures we meet your goals.
+          Our Collaborative Approach, Uniting Technology Experts And Business
+          Teams, Ensures We Meet Your Goals.
          </p>
          </div>
         </div>
@@ -341,8 +341,8 @@
               <img  src="./images/value_img4.png" class="w3-padding-32"/>
              <p>
               <h4 > <b>Expertise</b></h4>
-              With a seamless integration of expertise and innovation, we develop
-              and design your digital products to perfection.
+              With A Seamless Integration Of Expertise And Innovation, We Develop
+              And Design Your Digital Products To Perfection.
              </p>
              </div>
             </div>
