--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
   <h3 class="w3-xlarge w3-hide-medium w3-hide-large element">What client says</h3>
     <div  class="w3-container w3-row-padding w3-light-grey element">
     <div class="w3-col s2" style="margin-top: 100px;">
-      <a onclick="plusSlides(-1)"> <i class="fa fa-long-arrow-left w3-hover-opacity w3-xxxlarge"></i></a>
+      <a onclick="plusSlides(-1)">  <img src="./images/left-Arrow.png" class="w3-hover-opacity w3-xxlarge" alt="Left Arrow"></a>
     </div>
     <div class="w3-col s8">
       <p class="w3-center" style="font-size: 29px; font-weight: 400;line-height: 40px;"> Lorem Ipsum is simply dummy text of the printing and<br/>typesetting industry. Lorem Ipsum has been the industry's<br/> standard dummy text</p>
@@ -267,7 +267,7 @@
       </div>
     </div>
      <div  class="w3-col s2" style="margin-top: 100px; ">
-      <a class="w3-right"  onclick="plusSlides(1)"> <i class="fa fa-long-arrow-right w3-hover-opacity w3-xxxlarge"></i></a>
+      <a class="w3-right"  onclick="plusSlides(1)">  <img src="./images/rigth-Arrow.png" class="w3-hover-opacity w3-xxlarge" alt="Right Arrow"></a>
     </div>
     </div>
     <div class="banner w3-padding-64 element">
