--- a/contactUs.html
+++ b/contactUs.html
@@ -162,6 +162,19 @@
     background: rgba(0, 176, 224, 0.60);
     border-radius: 10px; /* Adjust the border radius as needed */
 }
+.contact-row {
+  display: flex;
+  margin-bottom: 10px;
+ 
+  align-items: center;
+}
+
+
+.contact-row p {
+ 
+  margin: 4px 4px 0;  /* Top margin only for spacing between label and text */
+  line-height: 1.5;
+}
   </style>
   </head>
 <body>
@@ -202,7 +215,7 @@
 </nav>
 
 <!-- Header with full-height image -->
-<header class="bgimg-1 w3-display-container  w3-text-white element" id="home">
+<header class="bgimg-1 w3-display-container  w3-text-white element" id="home"  style="z-index:-10;">
   <div class="grid-container"> 
  
     <span class="w3-jumbo w3-text-light-grey w3-hide-small"><strong>WE</strong></span>
@@ -218,10 +231,10 @@
 <!---consulting-->
 <div class="w3-container element w3-padding-64">
     <div class="w3-col m4 l4"  >
-        <h3 class="w3-xxlarge w3-hide-small">Let's Talk!</h3>
-        <h3 class="w3-xlarge w3-hide-large w3-hide-medium">Let's Talk!</h3>
+        <h3 class="w3-xxlarge w3-hide-small">Let's talk!</h3>
+        <h3 class="w3-xlarge w3-hide-large w3-hide-medium">Let's talk!</h3>
   
-      <p class="w3-large">Share Your Needs With Us To Gain A Comprehensive Understanding Of Your Project.</p>
+      <p class="w3-large">Share your needs with us to gain a comprehensive understanding of your project.</p>
     </div>
     <div class="w3-col m8 l7" style="float: right;">
       <form action="form-handler.php" method="post">
@@ -263,7 +276,7 @@
                 <div class="w3-center">
                     <img  src="./images/phone_img.png" class="w3-padding-16"/>
                     </div>
-                   <p class="w3-large"><b>CALL US</b><br>+91 7290040506</p>
+                   <p class="w3-large"><b>CALL US</b><br>+91 9711311790</p>
             </div>
             </div>
             <div class="w3-col l4  m6  w3-padding-large">
@@ -278,8 +291,8 @@
         </div>
     </div>
     <div class="w3-container element">
-        <h3 class="w3-xxlarge w3-hide-small">Find us on Goolge map</h3>
-        <h3 class="w3-xlarge w3-hide-large w3-hide-medium">Find us on Google map</h3>
+        <h3 class="w3-xxlarge w3-hide-small">Find us on goolge map</h3>
+        <h3 class="w3-xlarge w3-hide-large w3-hide-medium">Find us on goole map</h3>
         <img src="./images/company_location.png" class="w3-image" style="width:100%;">
       
       </div>
@@ -293,18 +306,30 @@
 </div>
  <div class="w3-quarter w3-medium w3-padding-small">
     <h4 class="w3-padding-16">Explore</h4>
-    <p><a style="text-decoration:none"  href="./index.html">HOME</a></p>
-    <p><a style="text-decoration:none" href="./aboutUs.html">ABOUT US</a></p>
-    <p><a style="text-decoration:none"  href="./softwareDevelopment.html">SOFTWARE DEVELOPMENT</a></p>
-    <p><a style="text-decoration:none" href="./managedServices.html">MANAGED SERVICES</a></p>
-    <p><a style="text-decoration:none" href="./consulting.html">CONSULTING</a></p>
+    <p><a style="text-decoration:none"  href="#home">HOME</a></p>
+    <p><a style="text-decoration:none" href="#about">ABOUT US</a></p>
+    <p><a style="text-decoration:none"  href="#softwareDev">SOFTWARE DEVELOPMENT</a></p>
+    <p><a style="text-decoration:none" href="#MngSer">MANAGED SERVICES</a></p>
+    <p><a style="text-decoration:none" href="#Consulting">CONSULTING</a></p>
  </div>
  <div class="w3-quarter w3-medium w3-padding-small">
     <h4 class="w3-padding-16">Keep in touch</h4>
-    <p>Address: C56/30 Sector 62 Noida 201307,<br> Uttar Pradesh, India</p>
-    <p>Phone: +0120 3112279, +0120 3112280</p>
-    <p>Mobile: +91 9711311790, +91 7290 040506</p>
-    <p>Email: <a href="mailto:info@syneztech.com">info@syneztech.com</a></p>
+    <div class="contact-row">
+      Address:
+      <p>C56/30 Sector 62 Noida 201307, Uttar Pradesh, India</p>
+    </div>
+    <div class="contact-row">
+    Phone:
+      <p>+0120 3112279, +0120 3112280</p>
+    </div>
+    <div class="contact-row">
+     Mobile:
+      <p>+91 7290 040506</p>
+    </div>
+    <div class="contact-row">
+    Email:
+      <p><a href="mailto:info@synzetech.com">info@synzetech.com</a></p>
+    </div>
  </div>
     <div class="w3-quarter w3-medium w3-padding-small">
         
