--- a/managedServices.html
+++ b/managedServices.html
@@ -307,7 +307,7 @@
            </p>
         </div>
         <div class="grid-item">
-            <img  src="./images/safe_img6.png" class="w3-padding-32"/>
+            <img  src="./images/safe_img6.svg" class="w3-padding-32"/>
           <h4 class="w3-text-orange"> <b>Increase Your Profit
         </b></h4>
          <p class="w3-large">
